--- a/src/components/meetups/MeetupForm.css
+++ b/src/components/meetups/MeetupForm.css
@@ -2,7 +2,7 @@ h3,h5 {
     color: greenyellow;
 }
 
-.mymeetups-cards {
+.meetupForm {
     margin: 1rem;
     background: purple;
     border-radius: 1rem;
@@ -31,20 +31,6 @@ h3,h5 {
     display: flex;
     justify-content: center;
 }
-.user-meetup-head {
-    display: flex;
-    justify-content: space-between;
-}
-.my-meetups-title {
-    flex-grow: 2;
-}
-.corner-button {
-    background: lightskyblue;
-    font-family: 'Lato', sans-serif;
-    border-radius: 1rem;
-    height: 2rem;
-    justify-content: center;
-}
-.corner-button-bin {
-    display: flex;
+label {
+    color: lightskyblue;
 }
