--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -84,6 +84,14 @@ fieldset {
     width: 15rem; 
     height: 4rem;
 }
+.button-add {
+    background: lightsteelblue;
+    font-family: 'Lato', sans-serif;
+    font-size : 20px; 
+    border-radius: 1rem;
+    width: 15rem; 
+    height: 4rem;
+}
 .dialog-message {
     color: midnightblue;
     font-family: 'Lato', sans-serif;
