--- a/src/components/meetups/MeetupCard.css
+++ b/src/components/meetups/MeetupCard.css
@@ -26,6 +26,12 @@ h3,h5 {
     margin-top: 0;
 }
 
+.container-cards {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
+
 .card-highlight {
     color: lightskyblue;
     display: flex;
@@ -39,7 +45,14 @@ h3,h5 {
     flex-grow: 2;
 }
 .corner-button {
-    background: lightskyblue;
+    background: lightsteelblue;
+    font-family: 'Lato', sans-serif;
+    border-radius: 1rem;
+    height: 2rem;
+    justify-content: center;
+}
+.corner-button-delete {
+    background: salmon;
     font-family: 'Lato', sans-serif;
     border-radius: 1rem;
     height: 2rem;
@@ -47,4 +60,7 @@ h3,h5 {
 }
 .corner-button-bin {
     display: flex;
+}
+.button-close {
+    text-decoration: none;
 }
