--- a/src/components/meetups/MeetupCard.css
+++ b/src/components/meetups/MeetupCard.css
@@ -71,7 +71,7 @@ h3,h5 {
     height: 2rem;
     justify-content: center;
 }
-.corner-button-yellow {
+.corner-button-purple {
     background: plum;
     font-family: 'Lato', sans-serif;
     border-radius: 1rem;
