--- a/src/components/meetups/MeetupForm.css
+++ b/src/components/meetups/MeetupForm.css
@@ -30,6 +30,11 @@ h3,h5 {
     display: flex;
     justify-content: space-between;
 }
+.button-top {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: -3rem;
+}
 
 .alignLeft {
     flex-direction: row-reverse;
